--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^6.18",
         "yajra/laravel-datatables-oracle": "^11.0"
     },
     "require-dev": {
